--- a/css/styles.css
+++ b/css/styles.css
@@ -10203,11 +10203,11 @@ section.resume-section .resume-section-content {
   height: 100%;
 }
 
-video {
+/*video {
   width: 100%;
   height: 56.25%;
   margin-top: 1.875%;
-}
+}*/
 
 
 /*img.animated-gif{
