--- a/css/styles.css
+++ b/css/styles.css
@@ -10215,3 +10215,18 @@ section.resume-section .resume-section-content {
   height: 56.25%;
   margin-top: 1.875%;
 }*/
+
+.grid { 
+    padding-left: 1.0rem;
+    padding-right: 1.0rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 10px;
+  align-items: center;
+  }
+.grid img {
+
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
+  max-width: 100%;
+}
